Defect fixes for duplicate compare sidebars on category page + checkout image stretching + Sort By container overflow issue + subscribe input text overflow + product shop width issue + add to cart button hover + revert custom shiv changes + hide cross sells on cart page + hide Kount module on order review page

--- a/webroot/skin/frontend/base/default/css/blueacorn-best-practice.css
+++ b/webroot/skin/frontend/base/default/css/blueacorn-best-practice.css
@@ -320,4 +320,3 @@ body.checkout-onepage-index .page-header-container .logo {
   margin: 0 auto;
   float: none;
 }
-body.checkout-onepage-index .page-header-container .logo img { width: 100%; }
