--- a/webroot/skin/frontend/blueacorn/mis/scss/layout/_footer.scss
+++ b/webroot/skin/frontend/blueacorn/mis/scss/layout/_footer.scss
@@ -194,6 +194,9 @@
         width: 100%;
         height: 40px;
         border-color: #1E1E1E;
+        @include bp(max-width, $bp-xsmall) {
+          padding-left: 5px;
+        }
     }
 
     .block-subscribe .button {
